--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "template",
+  "name": "exchanger",
   "version": "1.0.0",
   "description": "* _List all_\r * _the major technologies_\r * _you used in your project_\r * _here_",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
+    "start": "npm run build & webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
     "test": "jest --coverage"
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["html","text"]
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
   },
   "keywords": [],
-  "author": "",
+  "author": "Arthur Lee",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -24,16 +27,16 @@
     "dotenv-webpack": "^6.0.0",
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
     "style-loader": "^1.0.0",
-    "webpack": "4.39.3",
+    "webpack": "^5.42.0",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
-  },
+  }
 }
